2002-01-26  Cyrille Chepelov  <cyrille@chepelov.org>

	* po/update.pl (REMOVED):
	* po/update.sh (REMOVED):
	* xml-i18n-merge.in.kg (REMOVED):
	* xml-i18n-update.in.kg (REMOVED):
	* sheets/Makefile.am:
	* Makefile.am:
	* autogen.sh:
	* configure.in: converted from xml-i18n-tools to intltools

	This looks like it fixes the build bugs of the snapshot tarballs, 
	and it supersedes #69611.	

2002-01-25  Akira TAGOH  <tagoh@redhat.com>

	* lib/text.c (text_insert_char): fixed characters# calculation.
	it's not string length.

	* lib/plug-ins.c (dia_plugin_info_init): when GTK_DOESNT_TALK_UTF8_WE_DO
	is defined, needs to convert a description to UTF-8.

	* app/render_gdk.c (get_text_width): fixed transaction for
	UTF-8 support. also should uses gdk_text_width_wc() instead
	of gdk_text_width().

	* app/render_gdk.c (draw_string): when GTK_DOESNT_TALK_UTF8_WE_DO
	is defined, needs to convert to locale encoding for display.
	Also use utfchar instead of char for argument.

2002-01-24  Hans Breuer  <hans@breuer.org>

	* app/commands.c(edit_paste_callback and more) : 
	call diagram_modified(ddisp->diagram) to fix #68083
	(help_menu_callback) : plug a DIR leak

	* app/disp_callbacks.c(ddisplay_canvas_events) : handle 
	GTK_TALKS_UTF8_WE_DONT

	* app/render_gdk.c(get_text_with) : it's a bad idea to use
	gdk_string_with() when GTK_TALKS_UTF8_WE_DONT instead of
	gdk_text_width(). The length value is still questionable ...

	* lib/charconv.c : use functions already available in early
	GLIB-1.3 days whiches API hasn't changed since, to avoid
	version problems with the win32 build

	* lib/font.c : finally fix #58045 and #68208

	* lib/dia_xml.c (xmlDiaSaveFile) : gzdopen in binary mode

2002-01-24  Akira TAGOH  <tagoh@redhat.com>

	* app/disp_callbacks.c (ddisplay_canvas_events): when event returned
	no strings, fixed transaction.

	* lib/charconv.h: fixed typo.

	* app/menus.c: fixed typo.

	* lib/charconv.c (charconv_utf8_strchr): remove. use uni_strchr instead.
