@@ -1,3 +1,9 @@
+2002-01-26  Steffen Macke  <sdteffen@yahoo.com>
+
+	Patch from Frank Gevaerts <frank.gevaerts@fks.be>:
+	
+	* plug-ins/svg/render_svg.c: fixed arcs, fill and text alignment
+
 2002-01-26  Cyrille Chepelov  <cyrille@chepelov.org>
 
 	* po/update.pl (REMOVED):
